--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   comment_box: ^0.0.18
   google_generative_ai: ^0.4.0
   flutter_dotenv: ^5.1.0
+  flutter_markdown: ^0.6.20
 
 dev_dependencies:
   flutter_test:
