--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_generative_ai: ^0.4.0
   flutter_dotenv: ^5.1.0
   flutter_markdown: ^0.6.20
+  lorem_ipsum: ^0.0.3
 
 dev_dependencies:
   flutter_test:
