--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   flutter_markdown: ^0.6.20
   lorem_ipsum: ^0.0.3
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
